--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
+version: "3.9"
+
 services:
   country-service:
     build: ./country-service
-    expose:
-      - "5001"
 
   holiday-service:
     build: ./holiday-service
-    expose:
-      - "5002"
 
   frontend:
     build: ./frontend
